Setting correct overflow for image-wrapper on product selector

--- a/sass/wc-newsletter-generator-front-end-editor.scss
+++ b/sass/wc-newsletter-generator-front-end-editor.scss
@@ -140,9 +140,11 @@
 					position: absolute;
 					top: 10px;
 					left: 10px;
+					overflow: hidden;
 
 					img{
 						width: 100%;
+						height: auto;
 					}
 				}
 
